syntax = "proto3";

package userPackage;

service userService {
    rpc GetUsers (Empty) returns (GetUsersResponse);
    rpc AddUser (AddUsersRequest) returns (User);
}

message User {
    string id = 1;
    string fullName = 2;
    string email = 3;
    string password = 4;
}

message GetUsersResponse {
    repeated User users = 1;
}

message AddUsersRequest {
    string fullName = 1;
    string email = 2;
    string password = 3;
}

message Empty {}
